<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EfeedActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="143dp"
                tools:layout_conversion_absoluteWidth="379dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_conversion_absoluteHeight="143dp"
                    tools:layout_conversion_absoluteWidth="379dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="0dp">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="#3D5B59"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintEnd_toStartOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_waktu"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="#3D5B59"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView2"
                        tools:layout_conversion_absoluteHeight="56dp"
                        tools:layout_conversion_absoluteWidth="347dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtWaktu1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/edt_waktu_1"
                            tools:layout_conversion_absoluteHeight="56dp"
                            tools:layout_conversion_absoluteWidth="347dp"
                            tools:layout_editor_absoluteX="32dp"
                            tools:layout_editor_absoluteY="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        tools:layout_conversion_absoluteHeight="56dp"
                        tools:layout_conversion_absoluteWidth="347dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtWaktu2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/edt_waktu_2"
                            tools:layout_conversion_absoluteHeight="56dp"
                            tools:layout_conversion_absoluteWidth="347dp"
                            tools:layout_editor_absoluteX="32dp"
                            tools:layout_editor_absoluteY="88dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                        tools:layout_conversion_absoluteHeight="56dp"
                        tools:layout_conversion_absoluteWidth="347dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtWaktu3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/edt_waktu_3"
                            tools:layout_conversion_absoluteHeight="56dp"
                            tools:layout_conversion_absoluteWidth="347dp"
                            tools:layout_editor_absoluteX="32dp"
                            tools:layout_editor_absoluteY="88dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="#3D5B59"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintEnd_toStartOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_berat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="#3D5B59"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:layout_conversion_absoluteHeight="56dp"
                        tools:layout_conversion_absoluteWidth="347dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtBerat1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_berat_1"
                            android:inputType="number"
                            android:maxLength="5"
                            app:textInputLayoutFocusedRectEnabled="false"
                            tools:layout_conversion_absoluteHeight="56dp"
                            tools:layout_conversion_absoluteWidth="347dp"
                            tools:layout_editor_absoluteX="32dp"
                            tools:layout_editor_absoluteY="88dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout4"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                        tools:layout_conversion_absoluteHeight="56dp"
                        tools:layout_conversion_absoluteWidth="347dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtBerat2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_berat_2"
                            android:inputType="number"
                            android:maxLength="5"
                            tools:layout_conversion_absoluteHeight="56dp"
                            tools:layout_conversion_absoluteWidth="347dp"
                            tools:layout_editor_absoluteX="32dp"
                            tools:layout_editor_absoluteY="88dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout5"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                        tools:layout_conversion_absoluteHeight="56dp"
                        tools:layout_conversion_absoluteWidth="347dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtBerat3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_berat_3"
                            android:inputType="number"
                            android:maxLength="5"
                            tools:layout_conversion_absoluteHeight="56dp"
                            tools:layout_conversion_absoluteWidth="347dp"
                            tools:layout_editor_absoluteX="32dp"
                            tools:layout_editor_absoluteY="88dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_error"
                android:text="@string/btn_reset"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnUbah"
                app:layout_constraintStart_toStartOf="@+id/cardView4"
                app:layout_constraintTop_toTopOf="@+id/btnUbah" />

            <Button
                android:id="@+id/btnUbah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_ubah"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardView4"
                app:layout_constraintStart_toEndOf="@+id/btnReset"
                app:layout_constraintTop_toBottomOf="@+id/cardView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>